libs/parser/testdata/fixtures/negative/legacy_top_level_reference.csl
source:
	alias: 'network'
	type: 'folder'
	path: './config'

reference:network:vpc.cidr
reference:security:rules.ingress.http

config:
	key: 'value'
